--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a class="login-form__link" href="#">Find Kakao Account or Password</a>
     </form>
     <div id="no-mobile">
-        <span>Your screen is too big</span>
+        <span>Your screen is super big</span>
     </div>
     <script src="https://kit.fontawesome.com/03ab144667.js" crossorigin="anonymous"></script>
 </body>
